# lightweight_G

./: inference.py  train.py
dataset/: data.py
loss/: charbonnier.py
model/: denoiser.py
trt_cpp/: CMakeLists.txt
trt_cpp/include/: DataProcessor.h  TRTInfer.h
trt_cpp/src/: DataProcessor.cpp  TRTInfer.cpp  main.cpp
utils/: speckle_invK2_5x5x5.py  viwe_npy.py
